# compilers-project

./: .gitignore  Cargo.toml  README.md  build.rs  million.program  million.py  shadow.program  shortcircuit.program  test.program  todo.md
programs/: break_cont.json  break_cont.program  continue_inner.json  continue_inner.program  control_flow_error.json  control_flow_error.program  control_flow_ok.json  control_flow_ok.program  many_args.json  many_args.program  result_return.json  result_return.program  return_from_while_1.json  return_from_while_1.program  shortcircuit.json  square.json  square.program  test.json
src/: asm.rs  ast.rs  config.rs  ir.rs  lib.rs  location.rs  main.rs  parser.rs  symtab.rs  tokenizer.rs  trace.rs  typecheck.rs
src/asm/: assembler.rs  intrinsics.rs  stdlib.s
src/ast/: macros.rs  op.rs
src/parser/: macros.rs  op.rs  tests.rs
src/tokenizer/: exercises.rs  tests.rs
tests/: programs.rs
