[package]
name = "compilers-project"
version = "0.1.0"
edition = "2021"
default-run = "standalone"

[dependencies]
base64 = "0.22.1"
clap = { version = "4.5.26", features = ["derive"] }
regex = "1.11.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
thiserror = "2.0.11"

[profile.release]
strip = "symbols"
lto = "thin"
