[package]
name = "compilers-project"
version = "1.2.0"
edition = "2024"
default-run = "compiler"

[dependencies]
base64 = "0.22.1"
clap = { version = "4.5.26", features = ["derive"] }
regex = "1.11.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
tempfile = "3.17.1"
thiserror = "2.0.11"

[profile.release]
strip = "symbols"
lto = "thin"
